			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

================================
VERSION 5.6.1 (January 10, 2006)
================================

  * CLEANUP: Various type issues.  Peter Ludemann.

  * FIXED: Bug#131: error handling in lock-option of open/4.
    Holger Kanwischer.

  * FIXED: stream_property(X, alias(A)) for standard streams.  Paulo Moura.

  * FIXED: Bug#130: Prolog arithmetic functions using rationals.  Koos Dering.

  * FIXED: Online manual index handling (double 'Overview').   
    Pierpaolo BERNARDI.

  * FIXED: expand_term/2 bypass expansion for variables.  Paulo Moura.

=================================
VERSION 5.6.0 (December 22, 2005)
=================================

  * FIXED: Float/integer indexing problems that can cause both slow access
    and much too large datastructures for the index.

  * PORT: pl-stream.h: avoid 'new' (work around MSVC 7 bug).  Alan Baljeu.

  * PORT: Visual studio 2003 (MSVC 8) issues.  Basic Prolog passes the
    test suite, but XPCE crashes quickly.

==================================
VERSION 5.5.40 (December 07, 2005)
==================================

  * ADDED: prolog flag timezone.

  * ADDED: Foreign functions to exchange GMP numbers.  Roberto Bagnara.

  * FIXED: library(listing) sending some of its output to current output
    rather than the specified stream.

  * ENHANCED: More flexible matching in library(prolog_clause).


==================================
VERSION 5.5.39 (November 29, 2005)
==================================

  * FIXED: Bug#122: Crash in GC on last-call to an autoloaded procedure
    where the autoloader calls the garbage collector.  Fabien Todescato.

  * PORT: More Cygwin issues by Corinna Vinschen.
