@@ -565,6 +565,7 @@ A yfy			"yfy"
 A zero_divisor		"zero_divisor"
 A lsb			"lsb"
 A popcount		"popcount"
+A radix			"radix"
 
 F abs			1
 F access		1
