@@ -553,3 +553,4 @@ ATOM("yfy"),
 ATOM("zero_divisor"),
 ATOM("lsb"),
 ATOM("popcount"),
+ATOM("radix"),
